[package]
name = "wasm-sudoku"
version = "0.1.0"
authors = ["Bryan Bush <bryan@dialexa.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
rand = { version = "0.7.3", features = ["wasm-bindgen"] }
wasm-bindgen = "0.2.68"

[profile.release]
opt-level = "s"